# travelplanner

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT_FOR_NEXT_SESSION.md  CONTEXT_PRESERVATION.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  Makefile  PRODUCTION_SETUP.md  README.md  RENDER_ENV_SETUP.md  SETUP_COMPLETE.md  docker-compose.yml  railway-backend.toml  railway-frontend.toml  railway.json  render.yaml  test-google-signin.html  test-server.js  travelplanner-demo.html
.github/workflows/: ci.yml  pr.yml
backend/: .env  .env.example  .railwayignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  init.sql  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh
backend/app/: __init__.py  main.py  main_simple.py  main_simple_db.py
backend/app/api/v1/: auth.py  cities.py  test_auth.py  trips.py  voting.py
backend/app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  base.py  city.py  trip.py  user.py  voting.py
backend/app/schemas/: auth.py
backend/docs/: GOOGLE_OAUTH_SETUP.md
backend/migrations/: env.py
backend/tests/: __init__.py
backend/tests/unit/: __init__.py  test_main_simple.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: .env  .env.example  .eslintrc.cjs  .railwayignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  nixpacks.toml  package-lock.json  package.json  railway.toml  server.js  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  AppMinimal.tsx
frontend/src/features/auth/: index.ts
frontend/src/features/auth/components/: AuthCallback.tsx  AuthCallbackSimple.tsx  AuthStatus.tsx  LandingPage.tsx  LoginPage.tsx  ProtectedRoute.tsx  SessionManager.tsx  UserProfile.tsx
frontend/src/features/auth/hooks/: useAuth.ts
frontend/src/features/auth/services/: authService.ts
frontend/src/pages/: AuthSuccess.tsx  Dashboard.tsx  HomePage.tsx  Profile.tsx
frontend/src/shared/components/: Layout.tsx  LoadingSpinner.tsx  Navigation.tsx
frontend/src/shared/utils/: cn.ts
frontend/src/styles/: index.css
frontend/src/test/: setup.ts
frontend/src/utils/: auth.ts
